--- a/packages/client/pages/home/Cargo.toml
+++ b/packages/client/pages/home/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "client-page-home"
+name = "client_page-home"
 version.workspace = true
 edition.workspace = true
 publish = false
@@ -11,13 +11,13 @@ workspace = true
 path = "lib.rs"
 
 [dependencies]
-client-components.workspace = true
-client-composables.workspace = true
-client-env.workspace = true
-client-globals.workspace = true
-client-i18n.workspace = true
-client-router.workspace = true
-client-stores.workspace = true
+client_components.workspace = true
+client_composables.workspace = true
+client_env.workspace = true
+client_i18n.workspace = true
+client_router.workspace = true
+client_stores.workspace = true
+common.workspace = true
 leptos.workspace = true
 leptos_i18n.workspace = true
 leptos_router.workspace = true
