--- a/packages/client/utils/Cargo.toml
+++ b/packages/client/utils/Cargo.toml
@@ -11,7 +11,7 @@ workspace = true
 path = "lib.rs"
 
 [dependencies]
-common.workspace = true
+common = { workspace = true, features = ["leptos"] }
 futures.workspace = true
 leptos.workspace = true
 time.workspace = true
