--- a/packages/client/components/Cargo.toml
+++ b/packages/client/components/Cargo.toml
@@ -13,7 +13,7 @@ path = "lib.rs"
 [dependencies]
 client_composables.workspace = true
 client_router.workspace = true
-common.workspace = true
+common = { workspace = true, features = ["leptos"] }
 leptos.workspace = true
 leptos_animated_for.workspace = true
 paste.workspace = true
