--- a/packages/client/pages/about/Cargo.toml
+++ b/packages/client/pages/about/Cargo.toml
@@ -15,7 +15,7 @@ client_components.workspace = true
 client_composables.workspace = true
 client_i18n.workspace = true
 client_utils.workspace = true
-common.workspace = true
+common = { workspace = true, features = ["leptos"] }
 leptos.workspace = true
 leptos_i18n.workspace = true
 rand.workspace = true
