--- a/packages/client/app/Cargo.toml
+++ b/packages/client/app/Cargo.toml
@@ -23,7 +23,7 @@ client_page-home.path = "../pages/home"
 client_page-404.path = "../pages/404"
 client_router.workspace = true
 client_utils.workspace = true
-common = { workspace = true, features = ["leptos"] }
+common = { workspace = true, features = ["client"] }
 leptos.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
