--- a/packages/client/pages/404/Cargo.toml
+++ b/packages/client/pages/404/Cargo.toml
@@ -15,6 +15,6 @@ client_components.workspace = true
 client_composables.workspace = true
 client_i18n.workspace = true
 client_router.workspace = true
-common = { workspace = true, features = ["leptos"] }
+common = { workspace = true, features = ["client"] }
 leptos.workspace = true
 leptos_router.workspace = true
