--- a/packages/client/pages/about/Cargo.toml
+++ b/packages/client/pages/about/Cargo.toml
@@ -15,6 +15,6 @@ client_components.workspace = true
 client_composables.workspace = true
 client_i18n.workspace = true
 client_utils.workspace = true
-common = { workspace = true, features = ["leptos"] }
+common = { workspace = true, features = ["client"] }
 leptos.workspace = true
 rand.workspace = true
