--- a/packages/client/pages/hi/Cargo.toml
+++ b/packages/client/pages/hi/Cargo.toml
@@ -16,7 +16,7 @@ client_composables.workspace = true
 client_i18n.workspace = true
 client_router.workspace = true
 client_stores.workspace = true
-common = { workspace = true, features = ["leptos"] }
+common = { workspace = true, features = ["client"] }
 leptos.workspace = true
 leptos_i18n.workspace = true
 leptos_router.workspace = true
