--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,12 @@ proc-macro2 = "1.0.69"
 quote = "1.0.33"
 syn = { version = "2.0.38", features = ["full"] }
 
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
+opt-level = 3
+
 [profile.wasm-release]
 inherits = "release"
 opt-level = 'z'
