--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,2 +1,8 @@
 [env]
 PROJECT_REPOSITORY_URL = "https://github.com/brofrain/leptos-assembly"
+
+[unstable]
+codegen-backend = true
+
+[profile.server-dev]
+codegen-backend = "cranelift"
