--- a/.github/workflows/review.yaml
+++ b/.github/workflows/review.yaml
@@ -37,7 +37,7 @@ jobs:
       - name: Build
         run: just build
       - name: E2E
-        run: just e2e-release
+        run: just e2e
 
   audit:
     name: Dependency audit
