chore: specify min rust version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ members = [
 [workspace.package]
 version = "0.0.0"
 edition = "2021"
+rust-version = "1.73"
 
 [workspace.dependencies]
 client_components = { path = "packages/client/components" }
