--- a/packages/client/layouts/Cargo.toml
+++ b/packages/client/layouts/Cargo.toml
@@ -2,6 +2,7 @@
 name = "client_layouts"
 version.workspace = true
 edition.workspace = true
+rust-version.workspace = true
 publish = false
 
 [lints]
