--- a/packages/client/composables/Cargo.toml
+++ b/packages/client/composables/Cargo.toml
@@ -15,7 +15,7 @@ path = "lib.rs"
 client_i18n.workspace = true
 client_macros.workspace = true
 client_utils.workspace = true
-common = { workspace = true, features = ["client"] }
+common_exports = { workspace = true, features = ["client"] }
 futures.workspace = true
 leptos-use.workspace = true
 paste.workspace = true
