--- a/packages/client/pages/home/Cargo.toml
+++ b/packages/client/pages/home/Cargo.toml
@@ -18,7 +18,7 @@ client_env.workspace = true
 client_i18n.workspace = true
 client_router.workspace = true
 client_stores.workspace = true
-common = { workspace = true, features = ["client"] }
+common_exports = { workspace = true, features = ["client"] }
 leptos.workspace = true
 leptos_router.workspace = true
 web-sys.workspace = true
