--- a/packages/server/Cargo.toml
+++ b/packages/server/Cargo.toml
@@ -12,7 +12,7 @@ workspace = true
 path = "lib.rs"
 
 [dependencies]
-common.workspace = true
+common_exports = { workspace = true, features = ["server"] }
 leptos.workspace = true
 reqwest = { version = "0.11.22", features = ["json"] }
 serde.workspace = true
