--- a/.cargo/config.example.toml
+++ b/.cargo/config.example.toml
@@ -1,8 +1,10 @@
 [env]
 PROJECT_REPOSITORY_URL = "https://github.com/brofrain/leptos-assembly"
 
-[unstable]
-codegen-backend = true
-
-[profile.server-dev]
-codegen-backend = "cranelift"
+[build]
+rustflags = ["-Z", "threads=8"]
+# FIXME: cranelift doesn't work just yet
+# [unstable]
+# codegen-backend = true
+# [profile.server-dev]
+# codegen-backend = "cranelift"
