--- a/Cargo.toml
+++ b/Cargo.toml
@@ -106,6 +106,9 @@ opt-level = 1
 [profile.dev.package."*"]
 opt-level = 3
 
+[profile.client-dev]
+inherits = "dev"
+
 [profile.server-dev]
 inherits = "dev"
 
@@ -115,6 +118,16 @@ opt-level = 'z'
 lto = true
 codegen-units = 1
 panic = "abort"
+
+[profile.server-release]
+inherits = "release"
+
+[profile.test-ci]
+inherits = "test"
+opt-level = 0
+
+[profile.test-ci.package."*"]
+opt-level = 0
 
 [[workspace.metadata.leptos]]
 name = "core"
@@ -128,8 +141,10 @@ reload-port = 3334
 bin-features = []
 bin-default-features = false
 bin-profile-dev = "server-dev"
-lib-features = ["csr"]
+bin-profile-release = "server-release"
+lib-features = ["csr", "pwa"]
 lib-default-features = false
+lib-profile-dev = "client-dev"
 lib-profile-release = "client-release"
 separate-front-target-dir = true
 
