--- a/apps/core/Cargo.toml
+++ b/apps/core/Cargo.toml
@@ -13,7 +13,7 @@ name = "core"
 path = "main.rs"
 
 [dependencies]
-client = { path = "../../packages/client", features = ["ssr"] }
+client = { path = "../../packages/client", features = ["ssr", "pwa"] }
 common_logger = { workspace = true, features = ["ssr"] }
 leptos.workspace = true
 log.workspace = true
