feat: pwa-free dev mode

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,7 +142,7 @@ bin-features = []
 bin-default-features = false
 bin-profile-dev = "server-dev"
 bin-profile-release = "server-release"
-lib-features = ["csr", "pwa"]
+lib-features = ["csr"]
 lib-default-features = false
 lib-profile-dev = "client-dev"
 lib-profile-release = "client-release"
