--- a/apps/client/layouts/Cargo.toml
+++ b/apps/client/layouts/Cargo.toml
@@ -17,6 +17,7 @@ client_composables.workspace = true
 client_env.workspace = true
 client_i18n.workspace = true
 client_router.workspace = true
+client_utils.workspace = true
 exports = { workspace = true, features = ["client"] }
 server.workspace = true
 leptos.workspace = true
