--- a/apps/client/pages/home/Cargo.toml
+++ b/apps/client/pages/home/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "client_page-home"
+name = "client_page_home"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
