--- a/apps/client/pages/hi/index/Cargo.toml
+++ b/apps/client/pages/hi/index/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "client_page_404"
+name = "client_page_hi_index"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -12,10 +12,10 @@ workspace = true
 path = "lib.rs"
 
 [dependencies]
-client_components.workspace = true
-client_composables.workspace = true
 client_i18n.workspace = true
 client_router.workspace = true
+client_stores.workspace = true
 exports = { workspace = true, features = ["client"] }
 leptos.workspace = true
+leptos_i18n.workspace = true
 leptos_router.workspace = true
