--- a/Cargo.toml
+++ b/Cargo.toml
@@ -144,7 +144,7 @@ bin-features = []
 bin-default-features = false
 bin-profile-dev = "server-dev"
 bin-profile-release = "server-release"
-lib-features = ["csr"]
+lib-features = ["hydrate"]
 lib-default-features = false
 lib-profile-dev = "client-dev"
 lib-profile-release = "client-release"
