--- a/apps/client/Cargo.toml
+++ b/apps/client/Cargo.toml
@@ -21,6 +21,7 @@ leptos_animated_for.workspace = true
 leptos_i18n.workspace = true
 leptos_meta.workspace = true
 leptos_router.workspace = true
+leptos-use.workspace = true
 time.workspace = true
 wasm-bindgen.workspace = true
 getrandom = { workspace = true, optional = true }
@@ -37,15 +38,26 @@ csr = [
   "leptos_meta/csr",
   "leptos_router/csr",
 ]
+hydrate = [
+  "client_app/csr",
+  "logger/csr",
+  "dep:getrandom",
+  "time/wasm-bindgen",
+  "leptos/hydrate",
+  "leptos_i18n/hydrate",
+  "leptos_meta/hydrate",
+  "leptos_router/hydrate",
+]
 ssr = [
   "client_app/ssr",
   "logger/ssr",
   "leptos/ssr",
   "leptos_animated_for/ssr",
+  "leptos_i18n/axum",
   "leptos_meta/ssr",
   "leptos_router/ssr",
-  "leptos_i18n/axum",
+  "leptos-use/ssr",
 ]
 
 [package.metadata.cargo-all-features]
-skip_feature_sets = [["csr", "ssr"]]
+skip_feature_sets = [["csr", "ssr"], ["hydrate", "ssr"], ["hydrate", "csr"]]
