--- a/packages/logger/Cargo.toml
+++ b/packages/logger/Cargo.toml
@@ -12,14 +12,13 @@ workspace = true
 path = "lib.rs"
 
 [dependencies]
-macros.workspace = true
 cfg-if.workspace = true
-console_log = { workspace = true, optional = true }
 log.workspace = true
-time = { workspace = true, optional = true }
 fern = "0.6.2"
-owo-colors = { version = "3.5.0", optional = true }
 
-[features]
-csr = ["dep:console_log"]
-ssr = ["dep:owo-colors", "dep:time"]
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_log = { version = "1.0.0", features = ["color"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+time.workspace = true
+owo-colors.version = "3.5.0"
