feat: restore pwa wip

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -135,8 +135,9 @@ inherits = "release"
 name = "core"
 bin-package = "core"
 lib-package = "client"
-site-root = "target/site"
+site-root = "target/client"
 site-pkg-dir = "pkg"
+output-name = "app"
 assets-dir = "target/client-prebuild"
 site-addr = "127.0.0.1:3333"
 reload-port = 3334
@@ -144,18 +145,19 @@ bin-features = []
 bin-default-features = false
 bin-profile-dev = "server-dev"
 bin-profile-release = "server-release"
-lib-features = ["hydrate"]
+lib-features = ["hydrate", "vite-prebuild"]
 lib-default-features = false
 lib-profile-dev = "client-dev"
 lib-profile-release = "client-release"
 separate-front-target-dir = true
 
 [[workspace.metadata.leptos]]
-name = "pwa"
+name = "core-pwa"
 bin-package = "pwa"
 lib-package = "client"
-site-root = "target/pwa"
-site-pkg-dir = "pkg"
+site-root = "target/client-prebuild/pwa"
+site-pkg-dir = ""
+output-name = "app"
 bin-features = []
 bin-default-features = false
 bin-profile-dev = "server-dev"
