--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm"
   },
+  "type": "module",
   "dependencies": {
     "@unocss/reset": "^0.57.3",
     "nprogress": "^0.2.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.3.3",
-    "@iconify/json": "^2.2.141",
-    "@playwright/test": "^1.39.0",
-    "@types/node": "^20.9.0",
+    "@biomejs/biome": "1.4.1",
+    "@iconify/json": "^2.2.157",
+    "@playwright/test": "^1.40.1",
+    "@types/node": "^20.10.4",
     "@types/nprogress": "^0.2.3",
     "lightningcss": "^1.22.1",
-    "prettier": "^3.1.0",
-    "prettier-plugin-toml": "^1.0.0",
+    "prettier": "^3.1.1",
+    "prettier-plugin-toml": "^2.0.1",
     "sass": "^1.69.5",
-    "typescript": "^5.2.2",
-    "unocss": "^0.57.3",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.0",
     "unocss-preset-better-nested-colors": "^1.0.0",
-    "vite": "^4.5.0",
-    "vite-plugin-pwa": "^0.16.7",
-    "vite-plugin-webfont-dl": "^3.9.0"
+    "vite": "^5.0.9",
+    "vite-plugin-pwa": "^0.17.4",
+    "vite-plugin-webfont-dl": "^3.9.1"
   },
   "prettier": {
     "plugins": [
