--- a/Cargo.toml
+++ b/Cargo.toml
@@ -94,6 +94,7 @@ getrandom = { version = "0.2.11", features = ["js"] }
 # server-only
 axum = "0.6.20"
 leptos_axum = "0.5.4"
+leptos_integration_utils = "0.5.4"
 tokio = { version = "1.35.0", features = ["full"] }
 tower = "0.4.13"
 tower-http = { version = "0.4.4", features = ["fs"] }
