--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "unocss-preset-better-nested-colors": "^1.0.0",
     "vite": "^5.0.9",
     "vite-plugin-pwa": "^0.17.4",
-    "vite-plugin-webfont-dl": "^3.9.1"
+    "vite-plugin-webfont-dl": "^3.9.1",
+    "workbox-build": "^7.0.0",
+    "workbox-core": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0"
   },
   "prettier": {
     "plugins": [
