--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "type": "module",
   "dependencies": {
     "@unocss/reset": "^0.58.0",
-    "nprogress": "^0.2.0"
+    "nprogress": "^0.2.0",
+    "workbox-core": "^7.0.0",
+    "workbox-precaching": "^7.0.0",
+    "workbox-routing": "^7.0.0",
+    "workbox-strategies": "^7.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.4.1",
@@ -20,6 +24,7 @@
     "@playwright/test": "^1.40.1",
     "@types/node": "^20.10.4",
     "@types/nprogress": "^0.2.3",
+    "@types/uuid": "^9.0.7",
     "lightningcss": "^1.22.1",
     "prettier": "^3.1.1",
     "prettier-plugin-toml": "^2.0.1",
@@ -27,14 +32,10 @@
     "typescript": "^5.3.3",
     "unocss": "^0.58.0",
     "unocss-preset-better-nested-colors": "^1.0.0",
+    "uuid": "^9.0.1",
     "vite": "^5.0.9",
     "vite-plugin-pwa": "^0.17.4",
-    "vite-plugin-webfont-dl": "^3.9.1",
-    "workbox-build": "^7.0.0",
-    "workbox-core": "^7.0.0",
-    "workbox-precaching": "^7.0.0",
-    "workbox-routing": "^7.0.0",
-    "workbox-strategies": "^7.0.0"
+    "vite-plugin-webfont-dl": "^3.9.1"
   },
   "prettier": {
     "plugins": [
