--- a/Cargo.toml
+++ b/Cargo.toml
@@ -137,7 +137,7 @@ name = "core"
 bin-package = "core"
 lib-package = "client"
 site-root = "target/client"
-site-pkg-dir = "pkg"
+site-pkg-dir = "hydrate"
 output-name = "app"
 assets-dir = "target/client-prebuild"
 site-addr = "127.0.0.1:3333"
