--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -7,6 +7,8 @@ runs:
 
     - name: Cargo cache setup
       uses: Swatinem/rust-cache@v2
+      with:
+        cache-all-crates: true
 
     - name: pnpm setup
       uses: pnpm/action-setup@v2
