ci: use actions/cache

--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -6,9 +6,14 @@ runs:
     - uses: actions/checkout@v3
 
     - name: Cargo cache setup
-      uses: Swatinem/rust-cache@v2
+      uses: actions/cache@v3
       with:
-        cache-all-crates: true
+        path: |
+          ~/.cargo/
+          ~/.rustup/toolchains/
+          target/
+        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+        restore-keys: ${{ runner.os }}-cargo-
 
     - name: pnpm setup
       uses: pnpm/action-setup@v2
