refactor: remove overcomplicated macros

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,6 +69,7 @@ leptos_meta = { version = "0.5.4", features = ["nightly"] }
 leptos_router = { version = "0.5.4", features = ["nightly"] }
 leptos-use = { version = "0.9.0", features = ["serde"] }
 log = "0.4.20"
+num = "0.4.1"
 paste = "1.0.14"
 pct-str = "2.0.0"
 rand = "0.8.5"
@@ -179,17 +180,14 @@ disallowed_methods = "warn"
 disallowed_types = "warn"
 dbg_macro = "warn"
 deref_by_slicing = "warn"
-empty_structs_with_brackets = "warn"
 float_cmp_const = "warn"
 fn_to_numeric_cast_any = "warn"
 get_unwrap = "warn"
 integer_division = "warn"
-implied_bounds_in_impls = "warn"
 lossy_float_literal = "warn"
 map_err_ignore = "warn"
 multiple_inherent_impl = "warn"
 mutex_atomic = "warn"
-panic_in_result_fn = "warn"
 partial_pub_fields = "warn"
 print_stderr = "warn"
 print_stdout = "warn"
@@ -214,7 +212,7 @@ unseparated_literal_suffix = "warn"
 use_debug = "warn"
 verbose_file_reads = "warn"
 # allow
-cast_precision_loss = "allow"
 missing_panics_doc = "allow"
 must_use_candidate = "allow"
-return_self_not_must_use = "allow"
+too_many_lines = "allow"
+unsafe_derive_deserialize = "allow"
