--- a/clippy.toml
+++ b/clippy.toml
@@ -5,9 +5,9 @@ max-trait-bounds = 1
 too-many-arguments-threshold = 5
 upper-case-acronyms-aggressive = true
 disallowed-macros = [
-  { path = "leptos_dom::logging::log", reason = "The macro is intended as a debugging tool. Remove the invocation before committing it to a version control system." },
-  { path = "leptos_dom::logging::debug_warn", reason = "The macro is intended as a debugging tool. Remove the invocation before committing it to a version control system." },
-  { path = "leptos_dom::logging::error", reason = "For logging purposes use `log::error!` instead." },
+  { path = "leptos_dom::log", reason = "The macro is intended as a debugging tool. Remove the invocation before committing it to a version control system." },
+  { path = "leptos_dom::debug_warn", reason = "The macro is intended as a debugging tool. Remove the invocation before committing it to a version control system." },
+  { path = "leptos_dom::error", reason = "For logging purposes use `log::error!` instead." },
 ]
 disallowed-methods = [
   { path = "leptos_reactive::signal::create_signal", reason = "Use `RwSignal::new` instead" },
