refactor: flatten pages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,11 +12,7 @@ members = [
   "apps/client/layouts",
   "apps/client/macros",
   "apps/client/macros/proc",
-  "apps/client/pages/about",
-  "apps/client/pages/hi/index",
-  "apps/client/pages/hi/[name]",
-  "apps/client/pages/home",
-  "apps/client/pages/404",
+  "apps/client/pages",
   "apps/client/router",
   "apps/client/stores",
   "apps/client/utils",
