--- a/apps/client/pages/Cargo.toml
+++ b/apps/client/pages/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "client_page_404"
+name = "client_pages"
 version.workspace = true
 edition.workspace = true
 rust-version.workspace = true
@@ -14,8 +14,14 @@ path = "lib.rs"
 [dependencies]
 client_components.workspace = true
 client_composables.workspace = true
+client_env.workspace = true
 client_i18n.workspace = true
 client_router.workspace = true
+client_stores.workspace = true
+client_utils.workspace = true
 exports = { workspace = true, features = ["client"] }
 leptos.workspace = true
 leptos_router.workspace = true
+pct-str.workspace = true
+rand.workspace = true
+web-sys.workspace = true
