--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,7 +93,8 @@ leptos_axum = "0.5.4"
 leptos_integration_utils = "0.5.4"
 tokio = { version = "1.35.1", features = ["full"] }
 tower = "0.4.13"
-tower-http = { version = "0.4.4", features = ["fs"] }
+tower-http = { version = "0.4.4", features = ["fs", "trace"] }
+tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
 # proc macros
 proc-macro2 = "1.0.70"
 quote = "1.0.33"
