--- a/Cargo.toml
+++ b/Cargo.toml
@@ -210,5 +210,6 @@ verbose_file_reads = "warn"
 # allow
 missing_panics_doc = "allow"
 must_use_candidate = "allow"
+similar_names = "allow"
 too_many_lines = "allow"
 unsafe_derive_deserialize = "allow"
