--- a/apps/server/Cargo.toml
+++ b/apps/server/Cargo.toml
@@ -14,5 +14,14 @@ path = "lib.rs"
 [dependencies]
 exports = { workspace = true, features = ["server"] }
 leptos.workspace = true
+log.workspace = true
 reqwest = { version = "0.11.23", features = ["json"] }
 serde.workspace = true
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+axum.workspace = true
+leptos_axum.workspace = true
+leptos_integration_utils.workspace = true
+tracing-subscriber.workspace = true
+tower.workspace = true
+tower-http.workspace = true
