--- a/apps/client/composables/Cargo.toml
+++ b/apps/client/composables/Cargo.toml
@@ -18,5 +18,10 @@ client_utils.workspace = true
 exports = { workspace = true, features = ["client"] }
 futures.workspace = true
 leptos-use.workspace = true
+log.workspace = true
 paste.workspace = true
 wasm-bindgen.workspace = true
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+console_log = { version = "1.0.0", features = ["color"] }
+fern = "0.6.2"
